--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "scripts": {
     "build": "tsc"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^3.9.3"
+  },
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "axios": "^0.19.2",
