--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.10.0",
+    "@types/node": "^14.14.6",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-h5-audio-player": "^3.1.0"
