--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "jsx": "react",
       "declaration": true,
       "skipLibCheck": true,
+      "allowJs": true,
       "lib": [
         "dom",
         "dom.iterable",
